wooow i set lots of shooting star on header section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- header -->
 
-    <div class="relative bg-[url('/img/IMG_2147.PNG')] h-screen w-full bg-center bg-cover flex justify-center items-center">
+    <div class="relative z-0 bg-[url('/img/IMG_2147.PNG')] h-screen w-full bg-center bg-cover flex justify-center items-center">
         <div class="header flex flex-col justify-center items-center text-white font-nunito">
             <p class="nav-items text-md uppercase tracking-widest">Crafting Digital Universes with Moon Like</p>
             <img class="nav-items w-1/2 h-auto" src="./img/IMG_2153.PNG" alt="">
@@ -59,9 +59,26 @@
         </div>
 
 
-        <div class="planets absolute w-1/12 right-10 top-32 animate-spin-slowest rounded-full">
-            <img src="./img/Untitled_Artwork 2.png" alt="">
+        <div class="planets absolute w-44 left-10 top-32 animate-spin-slowest rounded-full">
+            <img src="./img/icePlanet.png" alt="">
         </div>
+
+        <div class="planets absolute w-1/6 right-10 top-72 animate-spin-revert-slowest rounded-full">
+            <img src="./img/shadowPlanet.png" alt="">
+        </div>
+
+        <div class="meteorite absolute w-16 -z-10 right-5 top-10 animate-move-left-and-right rounded-full">
+            <img src="./img/meteorite.png" alt="">
+        </div>
+
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+
     </div>
 
 
