add blur divider between section1  and 2

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
         <span></span>
         <span></span>
 
+    <div class="bg-[#211a3f] w-full absolute z-10  h-20 -bottom-10 right-0  blur-lg ">
+        <p class="text-[#211a3f]">mm</p>
+    </div>
     </div>
 
 
