add more meteorite to header

--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
             <img src="./img/meteorite.png" alt="">
         </div>
 
+        <div class="meteorite2 absolute w-16 -z-10 right-5 top-10 animate-move-left-and-right rounded-full">
+            <img src="./img/meteorite.png" alt="">
+        </div>
+
+        <div class="meteorite3 absolute w-16 -z-10 right-5 top-10 animate-move-left-and-right rounded-full">
+            <img src="./img/meteorite.png" alt="">
+        </div>
+
         <span></span>
         <span></span>
         <span></span>
