add some style to header section for shooting stars and planets and rock

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
 
 
-        <div class="planets absolute w-44 left-10 top-32 animate-spin-slowest rounded-full">
+        <div class="planets absolute w-44 left-10 top-32 animate-spin-slowest rounded-full opacity-70">
             <img src="./img/icePlanet.png" alt="">
         </div>
 
@@ -77,6 +77,14 @@
 
         <div class="meteorite3 absolute w-16 -z-10 right-5 top-10 animate-move-left-and-right rounded-full">
             <img src="./img/meteorite.png" alt="">
+        </div>
+
+        <div class="meteorite4 absolute w-16 -z-10 right-24 top-10 rounded-full">
+            <img src="./img/movingPlanet.png" alt="">
+        </div>
+
+        <div class="planets absolute w-40 left-44 bottom-32 animate-spin-slowest rounded-full opacity-90">
+            <img src="./img/rock.png" alt="">
         </div>
 
         <span></span>
