fix skills section

--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
 
     <!-- header -->
 
-    <div class="relative z-0 bg-[url('/img/IMG_2147.PNG')] h-screen w-full bg-center bg-cover flex justify-center items-center">
+    <div
+        class="relative z-0 bg-[url('/img/IMG_2147.PNG')] h-screen w-full bg-center bg-cover flex justify-center items-center">
         <div class="header flex flex-col justify-center items-center text-white font-nunito">
             <p class="nav-items text-md uppercase tracking-widest">Crafting Digital Universes with Moon Like</p>
             <img class="nav-items w-1/2 h-auto" src="./img/IMG_2153.PNG" alt="">
-            <p class="nav-items text-sm uppercase tracking-widest">Where Code Meets Creativity, and Web Design Defies Gravity!"
+            <p class="nav-items text-sm uppercase tracking-widest">Where Code Meets Creativity, and Web Design Defies
+                Gravity!"
             </p>
             <p class="text-center w-2/3 text-xxs mt-6">
                 I'm Moonlike, a front-end developer fusing art and code into mesmerizing
@@ -95,23 +97,107 @@
         <span></span>
         <span></span>
 
-    <div class="bg-[#211a3f] w-full absolute z-10  h-20 -bottom-10 right-0  blur-lg ">
-        <p class="text-[#211a3f]">mm</p>
+        <div class="bg-[#211a3f] w-full absolute z-10  h-20 -bottom-10 right-0  blur-lg ">
+            <p class="text-[#211a3f]">mm</p>
+        </div>
     </div>
-    </div>
 
 
-    <!-- Services -->
+    <!-- Skills -->
 
-    <div class="bg-[url('/img/IMG_2148.PNG')] h-screen w-full bg-center bg-cover">
-        <p>hello</p>
+    <div
+        class="relative z-0 bg-[url('/img/IMG_2148.PNG')] h-screen w-full bg-center bg-cover flex flex-col justify-center items-center pb-24">
+        <div class="rounded-full mb-5">
+            <svg class="w-14" viewBox="0 0 192 192" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#ffffff"
+                stroke-linecap="round" stroke-linejoin="round" stroke-width="12">
+                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                <g id="SVGRepo_iconCarrier">
+                    <path
+                        d="m137.62 55.8 1.634 8.832L170 75.45l-33.67 15.982c-5.442 13.064-14.519 27.667-34.332 34.291l-11.756 36.07-14.839-34.081c-18.376-2.05-26.127-8.848-26.127-8.848-9.147-.756-17.68-1.152-27.276-2.268 37.486-34.922 95.297-66.814 142.48-63.817 3.359 6.169 5.395 16.546 5.52 22.671s.435 27.427-23.5 58.05">
+                    </path>
+                    <path d="M22 116.596c.142 15.923 16.407 19.442 24.846 23.279"></path>
+                    <g stroke-width="6">
+                        <path stroke-linejoin="miter"
+                            d="M91.322 75.972c.363 8.263-3.008 14.087-3.008 14.087s-3.406-4.622-2.298-11.401z"></path>
+                        <path d="m46.49 99.596 23.15-7.509c22.45 20.336 41.59-2.048 43.095-20.602l19.713-13.44"></path>
+                    </g>
+                </g>
+            </svg>
+        </div>
+
+        <div class="flex flex-col justify-center items-center text-center font-alegreya text-white">
+            <h1 class="uppercase text-3xl font-bold mb-6">Skills</h1>
+            <p class="w-2/3 text-sm font-nunito leading-7">
+                I am a Front-End Web Developer with experience in various coding challenges, logo designing, and art. I
+                can guide you from concept to web development, having successfully completed over 20 websites where I
+                created all the materials myself. Let's collaborate to bring your ideas to life, crafting captivating
+                and user-friendly digital experiences.</p>
+        </div>
+
+        <div class="skill-items grid grid-cols-3 gap-y-10 w-3/4 mt-14">
+            <div class="flex flex-col justify-center items-center gap-y-2.5">
+                <!-- img-->
+                <img class="w-20" src="./img/1.png" alt="">
+                <!-- title -->
+                <p class="font-alegreya text-white uppercase">WEB DEVELOPMENT</p>
+                <!-- info -->
+                <p class="font-nunito text-sm text-center text-[#262858] font-semibold w-2/3">HTML , CSS ,JS ,TAILWIND ,DAISY UI, BOOTSTRAP</p>
+            </div>
+            <div class="flex flex-col justify-center items-center gap-y-2.5">
+                <!-- img-->
+                <img class="w-20" src="./img/2.png" alt="">
+                <!-- title -->
+                <p class="font-alegreya text-white uppercase">UI / UX Designer</p>
+                <!-- info -->
+                <p class="font-nunito text-sm text-center text-[#262858] font-semibold w-2/3">FIGMA , ADOBE XD , DORA</p>
+            </div>
+            <div class="flex flex-col justify-center items-center gap-y-2.5">
+                <!-- img-->
+                <img class="w-20" src="./img/3.png" alt="">
+                <!-- title -->
+                <p class="font-alegreya text-white uppercase">Graphic design</p>
+                <!-- info -->
+                <p class="font-nunito text-sm text-center text-[#262858] font-semibold w-2/3">PROCREATE </p>
+            </div>
+            <div class="flex flex-col justify-center items-center gap-y-2.5">
+                <!-- img-->
+                <img class="w-20" src="./img/4.png" alt="">
+                <!-- title -->
+                <p class="font-alegreya text-white uppercase">logo design</p>
+                <!-- info -->
+                <p class="font-nunito text-sm text-center text-[#262858] font-semibold w-2/3">PROCREATE , AI , MIDJOURNEY</p>
+            </div>
+            <div class="flex flex-col justify-center items-center gap-y-2.5">
+                <!-- img-->
+                <img class="w-20" src="./img/5.png" alt="">
+                <!-- title -->
+                <p class="font-alegreya text-white uppercase">3d design</p>
+                <!-- info -->
+                <p class="font-nunito text-sm text-center text-[#262858] font-semibold w-2/3">THREE.JS , BLENDER</p>
+            </div>
+            <div class="flex flex-col justify-center items-center gap-y-2.5">
+                <!-- img-->
+                <img class="w-20" src="./img/6.png" alt="">
+                <!-- title -->
+                <p class="font-alegreya text-white uppercase">Work with AI and midjourney</p>
+                <!-- info -->
+                <p class="font-nunito text-sm text-center text-[#262858] font-semibold w-2/3"></p>
+            </div>
+
+        </div>
+
+        <div class="h-24 z-10 blur-xl bg-[#edf4fa] w-full absolute bottom-0">
+            <p class="text-[#edf4fa]">mm</p>
+        </div>
+
     </div>
 
 
     <!-- header -->
 
     <div class="bg-[url('/img/IMG_2152.PNG')] h-screen w-full bg-center bg-cover">
-        <p>hello</p>
+
     </div>
 
 </body>
