fix header section

--- a/index.html
+++ b/index.html
@@ -164,20 +164,31 @@
 
     <div
         class="relative header z-0 bg-[url('/img/IMG_2147.PNG')] bg-cover bg-center bg-no-repeat  h-screen w-full flex flex-col justify-center items-center">
-        <div class="header flex flex-col justify-center items-center text-white font-nunito">
-            <p class="nav-items text-md uppercase tracking-widest">Crafting Digital Universes with Moon Like</p>
+        <div class="header flex flex-col justify-center text-center items-center text-white font-nunito 
+        2xl:space-y-0 xl:space-y-0 lg:space-y-0 md:space-y-0 space-y-4
+        2xl:mt-0 xl:mt-0 lg:mt-0 md:mt-0 mt-10">
+            <p class="nav-items 2xl:text-md xl:text-md lg:text-md md:text-md sm:text-lg text-xs 
+            2xl:pt-8 xl:pt-8 lg:pt-8 md:pt-8  pt-10
+            uppercase tracking-widest">Crafting Digital Universes with Moon Like</p>
             <img class="nav-items w-1/2 h-auto" src="./img/IMG_2153.PNG" alt="">
-            <p class="nav-items text-sm uppercase tracking-widest">Where Code Meets Creativity, and Web Design Defies
+            <p class="nav-items 2xl:text-sm xl:text-sm lg:text-sm md:text-sm text-xs
+            2xl:pt-6 xl:pt-6 lg:pt-6 md:pt-6 
+            uppercase tracking-widest">Where Code Meets Creativity, and Web Design Defies
                 Gravity!"
             </p>
-            <p class="text-center w-2/3 text-xxs mt-6">
+            <p class="text-center 2xl:w-2/3 xl:w-2/3 lg:w-2/3 md:w-full w-full 
+            2xl:text-xxs xl:text-xxs lg:text-xxs md:text-md text-xxs
+             2xl:px-0 xl:px-0 lg:px-0 md:px-24 px-10
+             leading-8
+             pt-10">
                 I'm Moonlike, a front-end developer fusing art and code into mesmerizing
                 creations. Join me on this magical journey where technology and imagination intertwine, painting a world
                 of endless possibilities. </p>
         </div>
 
 
-        <div class="planets absolute w-44 left-10 top-32 animate-spin-slowest rounded-full opacity-70">
+        <div class="planets absolute  2xl:w-44 xl:w-44 lg:w-44 md:w-44 w-20  left-10 
+        2xl:top-32 xl:top-32 lg:top-32 md:top-32 top-40 animate-spin-slowest rounded-full -z-10 opacity-70">
             <img src="./img/icePlanet.png" alt="">
         </div>
 
@@ -215,9 +226,9 @@
             <span></span>
         </div>
 
-        <div class="mt-20">
+        <div class="mt-20 md:pt-32">
             <a class="" href="https://github.com/mahzzaa">
-                <svg class="w-10 hover:color-[#eabb5f] " viewBox="0 0 192 192" xmlns="http://www.w3.org/2000/svg"
+                <svg class="2xl:w-10 xl:w-10 lg:w-10 w-10 md:w-16 hover:color-[#eabb5f] " viewBox="0 0 192 192" xmlns="http://www.w3.org/2000/svg"
                     fill="none">
                     <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                     <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
