--- a/index.html
+++ b/index.html
@@ -434,20 +434,19 @@
 
             <div class=" 
             2xl:mt-40  xl:mt-40  lg:mt-40  md:mt-40  mt-64
-            
             flex flex-col items-center justify-center 
             2xl:space-y-2.5 xl:space-y-2.5 lg:space-y-2.5 md:space-y-2.5  space-y-1">
                 <!-- img -->
                 <img class="2xl:w-52 xl:w-52 lg:w-52 md:w-52 w-32 lab" src="./img/room.png" alt="">
                 <!-- title -->
-                <h1 class="pt-3 drop-shadow-lg text-[#b9cbd4]  text-lg font-medium">
+                <h1 class="pt-3 drop-shadow-lg text-[#283e48]  text-lg font-medium">
                     Freelancer Projects
                 </h1>
                 <!-- text -->
                 <p class=" text-sm text-[#75a5ca] text-center">
 
                 </p>
-                <p class=" text-sm text-[#75a5ca] text-center font-medium animate-pulse">
+                <p class=" text-sm text-[#98bfd9] text-center font-medium animate-pulse">
                     Involved in multiple projects
                 </p>
             </div>
