--- a/index.html
+++ b/index.html
@@ -246,7 +246,6 @@
         </div>
 
         <div class="bg-[#211a3f] w-full absolute z-10  h-20 -bottom-10 right-0  blur-lg ">
-            <p class="text-[#211a3f]">mm</p>
         </div>
     </div>
 
@@ -369,7 +368,6 @@
         </div>
 
         <div class="h-32 z-10 blur-xl bg-[#edf4fa] w-full absolute -bottom-10">
-            <p class="text-[#edf4fa]">mm</p>
         </div>
 
     </div>
@@ -454,7 +452,6 @@
 
 
         <div class="h-20 z-10 blur-xl bg-[#26596f] w-full absolute -bottom-10">
-            <p class="text-[#edf4fa]">mm</p>
         </div>
 
     </div>
@@ -479,12 +476,13 @@
             <div class="flex flex-col justify-center items-center text-center font-alegreya text-white">
                 <h1 class="uppercase 
                 2xl:text-2xl xl:text-2xl lg:text-2xl md:text-2xl text-lg font-bold mt-6 mb-6">Portfolio</h1>
-                <p class="font-nunito">I worked on several Freelancer project and lots of indivitual project which i used most used and updated frameworks and libraries </p>
+                <p class="font-nunito">I worked on several Freelancer project and lots of indivitual project which i
+                    used most used and updated frameworks and libraries </p>
             </div>
 
-            <div class="grid 2xl:grid-cols-2 xl:grid-cols-2 lg:grid-cols-2 md:grid-cols-2 grid-cols-1 flex-col items-center justufy-content w-full">
-                <a href="https://edu-moonlike.surge.sh/" target="_blank"
-                 class="flex flex-col items-center justify-content
+            <div
+                class="grid 2xl:grid-cols-2 xl:grid-cols-2 lg:grid-cols-2 md:grid-cols-2 grid-cols-1 flex-col items-center justufy-content w-full">
+                <a href="https://edu-moonlike.surge.sh/" target="_blank" class="flex flex-col items-center justify-content
                  transition duration-75 hover:scale-95
                  w-auto h-full space-y-3 text-white font-nunito mt-20">
                     <!-- img bg -->
@@ -494,23 +492,22 @@
                     <p class="text-sm">Made by: HTML, CSS, JS, TAILWIND</p>
                     <!-- link/ button -->
                 </a>
-         
-               <a href="https://tworobots.surge.sh/" target="_blank"
-               class="flex flex-col items-center justify-content
+
+                <a href="https://tworobots.surge.sh/" target="_blank" class="flex flex-col items-center justify-content
                transition duration-75 hover:scale-95
                w-auto h-full space-y-3 text-white font-nunito mt-20">
-                  <!-- img bg -->
-                  <img class="border-2 border-white rounded-lg p-3 w-56" src="./img/tworobots-website.PNG" alt="">
-                  <!-- title  -->
-                  <p class="text-[#98bfd9]">Education website</p>
-                  <p class="text-sm">Made by: HTML, CSS, JS, TAILWIND</p>
-                  <!-- link/ button -->
-              </a>
-              
+                    <!-- img bg -->
+                    <img class="border-2 border-white rounded-lg p-3 w-56" src="./img/tworobots-website.PNG" alt="">
+                    <!-- title  -->
+                    <p class="text-[#98bfd9]">Education website</p>
+                    <p class="text-sm">Made by: HTML, CSS, JS, TAILWIND</p>
+                    <!-- link/ button -->
+                </a>
+
             </div>
 
-              <!-- social medias -->
-              <div class="flex justify-center items-center">
+            <!-- social medias -->
+            <div class="flex justify-center items-center">
                 <a class="mx-3 hover:scale-150" href="instagram.com/moonliketech">
                     <svg class="w-7" width="127px" height="127px" viewBox="0 0 24.00 24.00" fill="none"
                         xmlns="http://www.w3.org/2000/svg" stroke="#9c9c9c" stroke-width="0.00024000000000000003">
@@ -556,9 +553,9 @@
                     </svg>
                 </a>
                 <a href="https://www.buymeacoffee.com/moonlike.tech">
-                    <svg class="w-7 hover:scale-150" fill="#fff" viewBox="0 0 64 64" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"
-                        xmlns:serif="http://www.serif.com/"
+                    <svg class="w-7 hover:scale-150" fill="#fff" viewBox="0 0 64 64" version="1.1"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        xml:space="preserve" xmlns:serif="http://www.serif.com/"
                         style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
                         <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                         <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -645,9 +642,26 @@
 
     <div class="relative bg-[url('/img/plain.png')] h-screen w-full bg-center bg-cover
     flex flex-col items-center  pt-14">
-    <div class="h-20 z-10 blur-md bg-[#f6f7fb] w-[20000px] absolute -top-10">
-        <p class="text-[#f6f7fb]">mm</p>
-    </div>
+        <div class="h-20 z-10 blur-md bg-[#f6f7fb] w-[20000px] absolute -top-10">
+        </div>
+        <h1 class="text-[#33490b] uppercase 
+                2xl:text-2xl xl:text-2xl lg:text-2xl md:text-2xl text-lg font-bold mt-0 mb-6">Get in touch</h1>
+        <form class="flex flex-col justify-center items-center space-y-6"
+            action="https://formsubmit.co/moonlike.tech@gmail.com" method="POST">
+            <input class="border-2 border-[#33490b] rounded-lg w-[270px] 
+          bg-transparent placeholder:text-sm focus:placeholder:text-[#9f903afe] focus:text-[#9f903afe] px-5 py-3 mt-6
+          focus:outline-[#9f903afe]" type="text" name="name" placeholder="Name" required>
+            <textarea class="absolute border-2 border-[#33490b] rounded-lg h-32 
+          bg-transparent placeholder:text-sm focus:placeholder:text-[#9f903afe] focus:text-[#9f903afe] px-5 py-3
+          focus:outline-[#9f903afe] top-48" name="message" placeholder="Message" rows="4" cols="25"
+                required></textarea>
+
+
+            <button class="relative top-44 px-6 py-3
+            rounded-lg font-alegreya uppercase font-semibold
+            text-[#33490b] bg-[#9f903adb] animate-pulse hover:animate-none hover:bg-[#9f903ad0]"
+                type="submit">Send</button>
+        </form>
 
     </div>
 
@@ -656,6 +670,5 @@
     </script>
 </body>
 
-</body>
 
 </html>
